# WinGamingInput

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exports.def
include/: WindowsGamingInput.h
src/: WindowsGamingInput.cpp
